--- a/ToDoApp/app/src/main/res/layout/mainlist_item.xml
+++ b/ToDoApp/app/src/main/res/layout/mainlist_item.xml
@@ -5,30 +5,23 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/list_item_day"
+        android:id="@+id/list_item_toDo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:textAlignment="center"
-        android:textSize="25sp"
-        android:text="Day"/>
+        android:textSize="30sp"
+        android:text="toDo"/>
 
     <TextView
-        android:id="@+id/list_item_high"
+        android:id="@+id/list_item_descript"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginTop="10dp"
         android:textAlignment="center"
-        android:textSize="20sp"
-        android:text="High"/>
+        android:textSize="15sp"
+        android:text="Description"/>
 
-    <TextView
-        android:id="@+id/list_item_low"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:text="Low"/>
+
 
 </LinearLayout>
