--- a/ToDoApp/app/src/main/res/layout/activity_main.xml
+++ b/ToDoApp/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
             android:layout_gravity="bottom|right"
             android:layout_margin="16dp"
             android:src="@drawable/ic_add_white"
+            app:elevation="4dp"
             app:layout_anchor="@id/list_view1"
             app:layout_anchorGravity="bottom|right|end" />
 
