--- a/ToDoApp/app/src/main/res/layout/activity_main.xml
+++ b/ToDoApp/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
             android:layout_height="match_parent" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/myFAB"
+            android:id="@+id/mainFAB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
