--- a/ToDoApp/app/src/main/res/layout/activity_added.xml
+++ b/ToDoApp/app/src/main/res/layout/activity_added.xml
@@ -14,7 +14,7 @@
         android:id="@+id/added_title1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="WORK DAMMIT!"
+        android:text=""
         android:textSize="50dp" />
 
     <android.support.design.widget.CoordinatorLayout
