--- a/ToDoApp/app/src/main/res/values/colors.xml
+++ b/ToDoApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#ff0000</color>
     <color name="colorPrimaryDark">#de0b00</color>
     <color name="colorAccent">#ff0000</color>
+    <color name="colorText">#FFFFFF</color>
 </resources>
